# internal/api/v1/user/handlers.go
@@ -7,11 +7,28 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
+// GetMe godoc
+//
+// @Description	 get current user
+// @Tags         User
+// @Produce		 json
+// @Success		 200 {object}  userDTO.UserResponse
+// @Failure      401
+// @Router		 /api/v1/users/me [get]
 func GetMe(c *fiber.Ctx) error {
 	user := c.Locals("user").(userDTO.UserResponse)
 	return c.Status(fiber.StatusOK).JSON(fiber.Map{"status": "success", "data": fiber.Map{"user": user}})
 }
 
+// DeleteUser godoc
+//
+// @Description	 delete user by id
+// @Tags         User
+// @Produce		 json
+// @Param        id   path string true "User ID"
+// @Success		 200
+// @Failure      502
+// @Router		 /api/v1/users/ [delete]
 func DeleteUser(c *fiber.Ctx) error {
 	r := repository.NewUserRepository()
 	err := r.DeleteUser(c.Params("id"))
@@ -21,6 +38,15 @@ func DeleteUser(c *fiber.Ctx) error {
 	return c.Status(fiber.StatusOK).JSON(fiber.Map{"status": "success"})
 }
 
+// GetUser godoc
+//
+// @Description	 get user by id
+// @Tags         User
+// @Produce		 json
+// @Param        id   path string true "User ID"
+// @Success		 200 {object}  userDTO.UserResponse
+// @Failure      502
+// @Router		 /api/v1/users/ [get]
 func GetUser(c *fiber.Ctx) error {
 	repo := repository.NewUserRepository()
 
